--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
         <title>Groove.JS</title>
     </head>
     <body>
+        <h1>Groove.JS</h1>
         Groove.JS is a multi-framework JavaScript compiler for the Groovy language.
+        <ul>
+            <li>CoffeeScript-based Readable JavaScript</li>
+            <li>Backbone.JS</li>
+            <li>Angular.JS</li>
+        </ul>
     </body>
 </html>
